--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:angular-demo": "node dist/angular-demo/server/server.mjs"
+    "serve:ssr:angular-demo": "node dist/angular-demo/server/server.mjs",
+    "build:prod": "ng build --configuration production",
+    "start:prod": "ng serve --configuration production --host 0.0.0.0 --disable-host-check"
   },
   "private": true,
   "dependencies": {
